feature: se anade piscina para manejar pools de workers, se hace una clase base config para la eleccion del archivo worker en dev o prod

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "CommonJS",
     "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
