--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^22.9.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.2",
+    "@types/uuid": "^10.0.0",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "scripts": {
-    "build": "tsc",
-    "start:workers:dev": "ts-node src/start-workers.ts",
-    "start:workers:prod": "node dist/start-workers.js"
+    "build": "NODE_ENV=production tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon"
+  },
+  "dependencies": {
+    "csv-stringify": "^6.5.2",
+    "express": "^4.21.1",
+    "piscina": "^4.7.0",
+    "uuid": "^11.0.3"
   }
 }
